# songbook

./: .gitignore  BUILD  MODULE.bazel  build_png.sh  requirements_lock.txt
bazel-pandoc/: pandoc.bzl
bazel_pandoc/: BUILD.bazel  pandoc.bzl
lilypond/: BUILD  build.bzl
md_merge/: BUILD  md_merge.py
songs/: BUILD  build_sheetmusic.bzl  camp_barton_song.ly  dummy_line.ly  dunderbeck.ly  grace.ly  mountain_dew.ly  quartermaster_store.ly  semper_fidelis_excerpt.ly  songlist_from_files.py  the_titanic.ly  we_are_the_light_of_scouting.ly
upload_s3/: BUILD  deploy_s3.bzl  upload.py
website/: BUILD  index.html  index.md  index.template.md  script.html  song_list.md
