http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
  name="lilypond_archive",
  url="https://gitlab.com/lilypond/lilypond/-/releases/v2.24.3/downloads/lilypond-2.24.3-linux-x86_64.tar.gz",
  sha256="2322509950af1da21269d7bf6e3fbcbca8c09c1d2114db718263af92e15d0487",
  build_file_content = "exports_files(['bin/lilypond'])",
  strip_prefix="lilypond-2.24.3",
)

PANDOC_VERSION = "2.8.0.1"

BUILD_CONTENT_UNIX = """
filegroup(
    name = "pandoc",
    srcs = ["bin/pandoc"],
    visibility = ["//visibility:public"],
)"""

http_archive(
    name = "pandoc_bin_linux-x86_64",
    build_file_content = BUILD_CONTENT_UNIX,
    sha256 = "8ebf1b6c852d77290345afdd565547bdbd5de7888362f5a69fc7f51aeb8696a2",
    strip_prefix = "pandoc-{v}".format(v = PANDOC_VERSION),
    url = "https://github.com/jgm/pandoc/releases/download/{v}/pandoc-{v}-linux-amd64.tar.gz".format(v = PANDOC_VERSION),
)

register_toolchains(
    "//bazel_pandoc:pandoc_toolchain_linux-x86_64",
)
