http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

bazel_dep(
  name = "bazel_lilypond"
)

git_override(
  module_name = "bazel_lilypond",
  remote = "https://github.com/pbaughman/bazel-lilypond.git",
  commit = "58b7074",
)

PANDOC_VERSION = "2.8.0.1"

BUILD_CONTENT_UNIX = """
filegroup(
    name = "pandoc",
    srcs = ["bin/pandoc"],
    visibility = ["//visibility:public"],
)"""

http_archive(
    name = "pandoc_bin_linux-x86_64",
    build_file_content = BUILD_CONTENT_UNIX,
    sha256 = "8ebf1b6c852d77290345afdd565547bdbd5de7888362f5a69fc7f51aeb8696a2",
    strip_prefix = "pandoc-{v}".format(v = PANDOC_VERSION),
    url = "https://github.com/jgm/pandoc/releases/download/{v}/pandoc-{v}-linux-amd64.tar.gz".format(v = PANDOC_VERSION),
)

register_toolchains(
    "//bazel_pandoc:pandoc_toolchain_linux-x86_64",
)
